# InkFlow

./: .gitignore  Agent算法工程师升级计划.md  InkFlow-Hermes重构计划.md  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt  start-dev.ps1  优化方案.md  记忆系统设计-第二版.md
.trae/rules/: project_rules.md
novel_agent/: __init__.py  __main__.py
novel_agent/agent/: __init__.py  graph.py  prompt_builder.py
novel_agent/api/: __init__.py  deps.py  server.py
novel_agent/client/: index.html  package-lock.json  package.json  vite.config.ts
novel_agent/config/: __init__.py  llm_config.example.json  loader.py  token_config.json
novel_agent/core/: __init__.py  field_registry.py  models.py  outline_utils.py
novel_agent/service/: __init__.py  app_state.py  chapter_service.py  chat_service.py  schemas.py
tests/: conftest.py  test_e2e_chat.py  test_e2e_integration.py
tests/agent/: test_bugfix_regression.py  test_chapter.py  test_compression.py  test_config_loader.py  (+29 more)
业务逻辑/: 00-作者需求逻辑.md  01-agent-architecture.md  01-写-功能设计.md  01-对-功能设计.md  01-意图分册索引.md  01-改-功能设计.md  01-问-功能设计.md  02-lead-agent.md  03-subagent.md  04-handoff.md  05-plan-execute.md  06-memory-system.md  07-conversation-memory.md  08-session-management.md  09-tool-system.md  10-tool-classification.md  11-tool-dispatch.md  12-prompt-builder.md  13-context-compression.md  14-evaluator.md  15-llm-runtime.md  16-critic-review.md  17-field-management.md  18-chapter-production.md  19-api-routes.md  20-config.md  README.md  历史版本备份设计.md
技术方案/: Agent整体设计.md  SubAgent设计.md  上下文设计.md  工具系统设计.md  生成系统设计.md  记忆系统设计.md  运行时设计.md
(+351 files in other folders)
